# shellexeclist

./: .bumpversion.cfg  .coveragerc  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: autorelease.yml  pythonpackage.yml
shellexeclist/: __main__.py  defaults.py  parser.py  shellident.py
shellexeclist/bb/pysh/: pyshlex.py  pyshtables.py  pyshyacc.py
testfiles/: K01speech-noshebang  syntaxerror
tests/: __init__.py  base.py  test_class_0001.py  test_class_0002.py  test_class_0003.py  test_class_0004.py
